add login process and update view with login messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RuruCitiesocial</title>
+    <title>RURU_Citiesocial</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="turbolinks-cacahe-control" conent="no-cache">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <%= render "shared/frontend/flash" if notice %>
+    <%= render "shared/frontend/navbar" %>
+    <%= render "shared/frontend/top_menu" %>
     <%= yield %>
+    <%= render "shared/frontend/footer" %>
   </body>
 </html>
