--- a/app/views/shared/frontend/_navbar.html.erb
+++ b/app/views/shared/frontend/_navbar.html.erb
@@ -30,6 +30,17 @@
       <div class="navbar-item">
         <div class="buttons">
           <% if user_signed_in? %>
+            <div class="navbar-item has-dropdown is-hoverable">
+              <a class="navbar-link">
+                <i class="fa-regular fa-user"></i>
+              </a>
+              <div class="navbar-dropdown">
+                <%= link_to "個人資料", edit_user_registration_path, class: 'navbar-item' %>
+                <%= link_to "訂單記錄", orders_path, class: 'navbar-item' %>
+                <hr class="navbar-divider">
+                <%= link_to "登出",destroy_user_session_path, method: :delete, class: 'navbar-item'   %>
+              </div>
+            </div>
             <div class="navbar-item" data-controller="cart">
               <%= link_to cart_path do %>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -37,19 +48,6 @@
                   (<%= current_cart.items.count %>)
                 </span>
               <% end %>
-            </div>
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link">
-                <i class="fa-regular fa-user"></i>&nbsp;<%= current_user.email %>
-              </a>
-              <div class="navbar-dropdown">
-                <%= link_to "個人資料", edit_user_registration_path, class: 'navbar-item' %>
-                <a class="navbar-item">
-                  訂單記錄
-                </a>
-                <hr class="navbar-divider">
-                <%= link_to "登出",destroy_user_session_path, method: :delete, class: 'navbar-item'   %>
-              </div>
             </div>
           <% else %>
             <%= link_to "註冊", new_user_registration_path, class:'button is-primary ' %>
