--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
     <meta name="turbolinks-cacahe-control" conent="no-cache">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all'%>
     <%= javascript_pack_tag 'backend', 'data-turbolinks-track': 'reload' %>
   </head>
 
